objects/ssot__AdverseEventCause__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdverseEventId__c</fullName>
        <label>Adverse Event</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentMethodCodeId__c</fullName>
        <label>Assessment Method Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentMethodCodeObject__c</fullName>
        <label>Assessment Method Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthoredById__c</fullName>
        <label>Authored By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthoredByObject__c</fullName>
        <label>Authored By Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CauseCodeId__c</fullName>
        <label>Cause Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CauseCodeObject__c</fullName>
        <label>Cause Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CauseReferenceId__c</fullName>
        <label>Cause Reference</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CauseReferenceObject__c</fullName>
        <label>Cause Reference Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Adverse Event Cause</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Probability__c</fullName>
        <label>Probability</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716667880858_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventCause_AdverseEventId_map_rel</label>
        <referenceTo>ssot__AdverseEvent__dlm</referenceTo>
        <relationshipLabel>AdverseEventCause_AdverseEventId_map_rel</relationshipLabel>
        <relationshipName>rel_1716667880858_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721822643_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventCause_CauseCodeId_map_Co_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>AdverseEventCause_CauseCodeId_map_Co_rel</relationshipLabel>
        <relationshipName>rel_1716721822643_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721825414_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventCause_AssessmentMethodCo_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>AdverseEventCause_AssessmentMethodCo_rel</relationshipLabel>
        <relationshipName>rel_1716721825414_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>